# ComfyUI_Burve_Tools

./: README.md  __init__.py  character_planner.py  character_planner_presets.json  gemini_image_service.py  nodes.py  prompts.json  pyproject.toml  requirements.txt  system_instructions.json  test_node.py  test_nodes.py  v3_extension.py
release_notes/: 2026-03-crop-mask-upload-and-autofit.md  2026-03-crop-mask-workflow.md  2026-03-dynamiccombo-v2.md  2026-03-vertex-ai-launch.md  2026-04-crop-mask-thumbnail-picker.md
tests_js/: burve_crop_mask_geometry.test.js  burve_crop_mask_load_helpers.test.js
web/js/: burve_crop_mask_geometry.js  burve_crop_mask_load.js  burve_crop_mask_load_helpers.js
